[AGORA-2011] spec updates (#273)
* 💻 spec touchups for summary/description of ballot submission and auth
* 💻🛠️ add /rounds route
